kubernetes/skywalker/database/influxdb.virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService

metadata:
  name: influxdb

spec:
  gateways:
    - istio-system/feldman-in
  hosts:
    - influxdb.feldman.in
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: influxdb
            port:
              number: 8086
